@@ -25,37 +25,37 @@
 
 namespace JSC {
 
-    class BooleanPrototype;
+class BooleanPrototype;
 
-    class BooleanConstructor : public InternalFunction {
-    public:
-        typedef InternalFunction Base;
+class BooleanConstructor : public InternalFunction {
+public:
+    typedef InternalFunction Base;
 
-        static BooleanConstructor* create(ExecState* exec, JSGlobalObject* globalObject, Structure* structure, BooleanPrototype* booleanPrototype)
-        {
-            BooleanConstructor* constructor = new (NotNull, allocateCell<BooleanConstructor>(*exec->heap())) BooleanConstructor(globalObject, structure);
-            constructor->finishCreation(exec, booleanPrototype);
-            return constructor;
-        }
+    static BooleanConstructor* create(ExecState* exec, JSGlobalObject* globalObject, Structure* structure, BooleanPrototype* booleanPrototype)
+    {
+        BooleanConstructor* constructor = new (NotNull, allocateCell<BooleanConstructor>(*exec->heap())) BooleanConstructor(globalObject, structure);
+        constructor->finishCreation(exec, booleanPrototype);
+        return constructor;
+    }
 
-        static const ClassInfo s_info;
+    static const ClassInfo s_info;
 
-        static Structure* createStructure(JSGlobalData& globalData, JSGlobalObject* globalObject, JSValue prototype) 
-        { 
-            return Structure::create(globalData, globalObject, prototype, TypeInfo(ObjectType, StructureFlags), &s_info); 
-        }
+    static Structure* createStructure(JSGlobalData& globalData, JSGlobalObject* globalObject, JSValue prototype) 
+    { 
+        return Structure::create(globalData, globalObject, prototype, TypeInfo(ObjectType, StructureFlags), &s_info); 
+    }
 
-    protected:
-        void finishCreation(ExecState*, BooleanPrototype*);
+protected:
+    void finishCreation(ExecState*, BooleanPrototype*);
 
-    private:
-        BooleanConstructor(JSGlobalObject*, Structure*);
-        static ConstructType getConstructData(JSCell*, ConstructData&);
-        static CallType getCallData(JSCell*, CallData&);
-    };
+private:
+    BooleanConstructor(JSGlobalObject*, Structure*);
+    static ConstructType getConstructData(JSCell*, ConstructData&);
+    static CallType getCallData(JSCell*, CallData&);
+};
 
-    JSObject* constructBooleanFromImmediateBoolean(ExecState*, JSGlobalObject*, JSValue);
-    JSObject* constructBoolean(ExecState*, const ArgList&);
+JSObject* constructBooleanFromImmediateBoolean(ExecState*, JSGlobalObject*, JSValue);
+JSObject* constructBoolean(ExecState*, const ArgList&);
 
 } // namespace JSC
 
